tests/ui/resolve/issue-108529.stderr
error[E0432]: unresolved import `f::f`
  --> $DIR/issue-108529.rs:2:8
   |
LL | use f::f::f;
   |        ^ expected type, found associated function `f` in `f`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
